Minimal VM. VM don't react to -Dcom.sun.management and -XX:+ManagementServer

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: embedded
    • b20
    • generic
    • linux
    • Verified

        The minimal VM should generate warnings if you use unsupported management options eg:

         -Dcom.sun.management and -XX:+ManagementServer

              Assignee:
              Joseph Provino (Inactive)
              Reporter:
              Roman Matafonov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: