8003539: Minimal VM don't react to -Dcom.sun.management and -XX:+ManagementServer

A warning message should be displayed if these options are used with the Minimal VM.

Reviewed-by: dholmes, dsamersoff